Melhorando codigo da primeira aula